# promprog

basic-dataset-processing/: get_col_id.awk  parse_columns.awk  process.awk  script.sh
bazel/with-decorator/PatternsCollection/: WORKSPACE  build.sh
bazel/with-decorator/PatternsCollection/Bridge/cpp-source/: BUILD
bazel/with-decorator/PatternsCollection/Builder/cpp-source/: BUILD
bazel/with-decorator/PatternsCollection/Decorator/cpp-source/: BUILD
bazel/with-decorator/PatternsCollection/Facade/cpp-source/facades/: BurgerFacade.cpp  BurgerFacade.h
bazel/with-decorator/PatternsCollection/FactoryMethod/cpp-source/: BUILD
bazel/with-decorator/PatternsCollection/Visitor/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/: WORKSPACE  bazel-PatternsCollection  bazel-bin  bazel-out  bazel-testlogs  build.sh
bazel/without-decorator/PatternsCollection/AbstractFactory/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Adapter/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/ChainResponsibility/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Command/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Composite/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Facade/cpp-source/: BUILD  main.cpp
bazel/without-decorator/PatternsCollection/Facade/cpp-source/facades/: IsaacFacade.cpp  IsaacFacade.h
bazel/without-decorator/PatternsCollection/Mediator/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Memento/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Observer/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Prototype/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/State/cpp-source/: BUILD
bazel/without-decorator/PatternsCollection/Strategy/cpp-source/: BUILD
bioinformatics-dataset-processing/: extract.sh  processing.awk  test.sh
cmake-1/: CMakeLists.txt  build.sh
cmake-1/A/: index.h  preparing.py
cmake-1/B/: CMakeLists.txt  lib.cpp  lib.h
cmake-1/C/: main.cpp  tests.cpp
cmake-2/: Dockerfile
cmake-3/TechProgSimpleLibrary/: CMakeLists.txt  build.sh  build_arm.sh
cmake-3/TechProgSimpleLibrary/include/: buffer.h
code-generation/with-codegen/: CMakeLists.txt  build.sh  gen.py  main.cpp
code-generation/with-opencv/: CMakeLists.txt  build.sh  main.cpp
disk-usage/: script.sh
json-dataset-processing/: filter.sh
map-reduce-awk/: mapper.awk  mapper.py  reducer.awk  run.sh  shuffler.awk  small.txt  text.txt
parallel-dataset-processing/: download.sh  example_list.txt  parse_links.awk
train-val-split/: get_train_size.awk  parse_columns.awk  script.sh  shuffle.awk  stratisfied_shuffle.awk
unit-mock/report/: 01-branchcov.txt  01-coverage.01-simple-library_Functions.cpp.html  01-coverage.html  02-branchcov.txt  02-coverage.02-tree_Tree.cpp.html  02-coverage.html  03-branchcov.txt  03-coverage.03-weather_Weather.cpp.html  03-coverage.html
unit-mock/task4/: build.sh
unit-mock/task4/include/: Weather.h
unit-mock/task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
unit-mock/task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
unit-mock/task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
